--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/product-1-720x480.jpg" alt="">
+              <img src="assets/images/63AMG.jpeg" alt="">
               <div class="down-content">
                 <h4>Lorem ipsum dolor sit amet</h4>
                 <div style="margin-bottom:10px;">
