--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <div class="video">
       <div class="container">
-    iframe width="936" height="527" src="https://www.youtube.com/embed/6esLVIVCi0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="936" height="527" src="https://www.youtube.com/embed/6esLVIVCi0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
       </div>
             <br>
