--- a/gear.html
+++ b/gear.html
@@ -71,6 +71,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="cars.html">Cars</a>
               </li>
+              <li class="nav">
+                <a class="nav-link" href="gear.html">Gear</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
               
