--- a/faq.html
+++ b/faq.html
@@ -38,8 +38,8 @@
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-envelope"></i>contact@company.com</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>123-456-7890</a></li>
+              <li><a href="#"><i class="fa fa-envelope"></i>chris@eliteimportz.com</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>301-604-5004</a></li>
             </ul>
           </div>
           <div class="col-md-4">
@@ -56,7 +56,7 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>ELITE<em> auto</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2><img src="assets/images/Logo.png" alt="">ELITE <em>auto</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
