--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
           <div class="item item-1">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>lorem ipsum dolor sit amet!</h6>
-                  <h4>Quam temporibus accusam <br> hic ducimus quia</h4>
-                  <p>Magni deserunt dolorem consectetur adipisicing elit. Corporis molestiae optio, laudantium odio quod rerum maiores, omnis unde quae illo.</p>
+                  <h4>Service-Performance-Customization</h4>
+                  <p>Welcome to ELITE. Your Quality-driven, Customer-focused, automotive service, performance and customization shop. We provide top-notch service inclusive of make and model.</p>
                   <a href="cars.html" class="filled-button">Cars</a>
                 </div>
             </div>
@@ -114,9 +113,8 @@
           <div class="item item-2">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>magni deserunt dolorem harum quas!</h6>
-                  <h4>Aliquam iusto harum <br>  ratione porro odio</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At culpa cupiditate mollitia adipisci assumenda laborum eius quae quo excepturi, eveniet. Dicta nulla ea beatae consequuntur?</p>
+                  <h4>Quality-Driven</h4>
+                  <p>From factory scheduled maintenance to custom aftermarket builds- we execute at the highest level using our professional expertise and top-tier equipment.</p>
                   <a href="about.html" class="filled-button">About Us</a>
                 </div>
             </div>
@@ -126,9 +124,8 @@
           <div class="item item-3">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>alias officia qui quae vitae natus!</h6>
-                  <h4>Lorem ipsum dolor <br>sit amet, consectetur.</h4>
-                  <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate mi. Sed nec cursus augue. Phasellus lacinia ac sapien vitae dapibus. Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</p>
+                  <h4>Customer-Focused</h4>
+                  <p>Whether we're servicing your daily driver or building your dream car, we treat you like family, and treat your car as if it were our very own.</p>
                   <a href="contact.html" class="filled-button">Contact Us</a>
                 </div>
             </div>
