Location and Image
Add Location information and shop image

--- a/index.html
+++ b/index.html
@@ -166,14 +166,13 @@
           <div class="row">
             <div class="col-md-6">
               <div class="left-image">
-                <img src="assets/images/about-1-570x350.jpg" class="img-fluid" alt="">
+                <img src="assets/images/ShopPhoto.jpg" class="img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-6 align-self-center">
               <div class="right-content">
-                <span>Who we are</span>
-                <h2>Get to know about <em>our company</em></h2>
-                <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus</p>
+                <h2>Location</h2>
+                <p>Conveniently located between Baltimore and Washington, D.C. at 3248 Laurel-Ft. Meade Rd, Laurel MD, ELITE welcomes thousands of vehicles from the DMV and beyond each year for everything from factory scheduled maintenance to show car-caliber builds.</p>
                 <a href="about.html" class="filled-button">Read More</a>
               </div>
             </div>
