Blurb about working on any type of car
Added text from original website about the different type of cars and upgrades that are offered

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             <section class='tabs-content'>
               <article id='tabs-1'>
                 <img src="assets/images/blog-image-1-940x460.jpg" alt="">
-                <h4><a href="blog-details.html">Lorem ipsum dolor sit amet, consectetur adipisicing.</a></h4>
-                <p>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet.</p>
+                <h4><a href="blog-details.html">Suspension, brakes, alignment, exhaust, wheel and tire packages, diagnostic, drivetrain, tune ups, performance and much more.</a></h4>
+                <p>Daily driver, weekend driver, work truck or super car; our skilled technicians take pride in completing their work to your satisfaction from start to finish using top class equipment and technique.</p>
               </article>
               <article id='tabs-2'>
                 <img src="assets/images/blog-image-2-940x460.jpg" alt="">
