--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <div class="col-md-4">
             <ul class="right-icons">
               <li><a href="https://www.facebook.com/eliteimportz" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="https://www.instagram.com/eliteimportz/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.youtube.com/user/crza81" target="_blank"><i class="fa fa-youtube"></i></a></li>
             </ul>
           </div>
         </div>
