Update car title to service across all files
Just changing the drop down bar title from Cars to Service, and then pushing this change to match all other references to Cars

--- a/car-details.html
+++ b/car-details.html
@@ -68,7 +68,7 @@
                 </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="cars.html">Cars</a>
+                <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav">
                 <a class="nav-link" href="gear.html">Gear</a>
@@ -327,7 +327,7 @@
                 <br>
                 
                 <strong>
-                  <a href="mailto:john@carsales.com">john@carsales.com</a>
+                  <a href="mailto:john@Serviceales.com">john@Serviceales.com</a>
                 </strong>
               </p>
             </div>
