--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cars.html">Cars</a>
+                <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav">
                 <a class="nav-link" href="gear.html">Gear</a>
@@ -104,7 +104,7 @@
                 <div class="text-content">
                   <h4>Service-Performance-Customization</h4>
                   <p>Welcome to ELITE. Your Quality-driven, Customer-focused, automotive service, performance and customization shop. We provide top-notch service inclusive of make and model.</p>
-                  <a href="cars.html" class="filled-button">Cars</a>
+                  <a href="service.html" class="filled-button">Service</a>
                 </div>
             </div>
           </div>
