--- a/service.html
+++ b/service.html
@@ -68,7 +68,7 @@
                 </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="cars.html">Cars</a>
+                <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav">
                 <a class="nav-link" href="gear.html">Gear</a>
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>Cars</h1>
+            <h1>Service</h1>
             <span>Lorem ipsum dolor sit amet.</span>
           </div>
         </div>
