--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cars.html">Cars</a>
+                <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav">
                 <a class="nav-link" href="gear.html">Gear</a>
@@ -166,7 +166,7 @@
               <div class="col-md-6">
                 <div class="count-area-content">
                   <div class="count-digit">26</div>
-                  <div class="count-title">Cars</div>
+                  <div class="count-title">Service</div>
                 </div>
               </div>
             </div>
