--- a/gear.html
+++ b/gear.html
@@ -69,7 +69,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cars.html">Cars</a>
+                <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav">
                 <a class="nav-link" href="gear.html">Gear</a>
@@ -99,7 +99,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="section-heading">
-                <h2>Featured <em>Cars</em></h2>
+                <h2>Featured <em>Service</em></h2>
                 <span>Aliquam id urna imperdiet libero mollis hendrerit</span>
               </div>
             </div>
