--- a/gear.html
+++ b/gear.html
@@ -71,7 +71,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Service</a>
               </li>
-              <li class="nav">
+              <li class="nav-item">
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item dropdown">
