new page addition GALARY

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-envelope"></i>contact@ELITEauto.com</a></li>
+              <li><a href="#"><i class="fa fa-envelope"></i>chris@eliteimportz.com</a></li>
               <li><a href="#"><i class="fa fa-phone"></i>301-604-5004</a></li>
             </ul>
           </div>
@@ -68,10 +68,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html">Service</a>
+                <a class="nav-link" href="cars.html">Cars</a>
+              </li>
+              <li class="nav">
+                <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="gear.html">Gear</a>
+                <a class="nav-link" href="galary.html">Galary</a>
               </li>
               <li class="nav-item dropdown active">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
@@ -166,7 +169,7 @@
               <div class="col-md-6">
                 <div class="count-area-content">
                   <div class="count-digit">26</div>
-                  <div class="count-title">Service</div>
+                  <div class="count-title">Cars</div>
                 </div>
               </div>
             </div>
