--- a/galary.html
+++ b/galary.html
@@ -81,8 +81,8 @@
               
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="about.html">About Us</a>
-                    <a class="dropdown-item active" href="blog.html">Blog</a>
-                    <a class="dropdown-item" href="team.html">Team</a>
+                    <a class="dropdown-item" href="blog.html">Blog</a>
+                    <a class="dropdown-item active" href="team.html">Team</a>
                     <a class="dropdown-item" href="testimonials.html">Testimonials</a>
                     <a class="dropdown-item" href="faq.html">FAQ</a>
                     <a class="dropdown-item" href="terms.html">Terms</a>
@@ -102,92 +102,65 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>Read our Blog</h1>
-            <span>Lorem ipsum dolor sit amet consectetur</span>
+            <h1>ELITE Galary</h1>
+            <span>The most ELITE whips on the east coast</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="single-services">
+    <div class="team" style="margin: 0">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <section class='tabs-content'>
-              <article id='tabs-1'>
-                <img src="assets/images/blog-image-1-940x460.jpg" alt="">
-                <h4><a href="blog-details.html">Lorem ipsum dolor sit amet, consectetur adipisicing.</a></h4>
-                <div style="margin-bottom:10px;">
-                  <span>John Doe &nbsp;|&nbsp; 27.07.2020 10:10 &nbsp;|&nbsp; 15 comments</span>
-                </div>
-                <p>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet.</p>
-                <br>
-                <div>
-                  <a href="blog-details.html" class="filled-button">Continue Reading</a>
-                </div>
-              </article>
-
-              <br>
-              <br>
-              <br>
-
-              <article id='tabs-2'>
-                <img src="assets/images/blog-image-2-940x460.jpg" alt="">
-                <h4><a href="blog-details.html">Mauris lobortis quam id dictum dignissim</a></h4>
-                <div style="margin-bottom:10px;">
-                  <span>John Doe &nbsp;|&nbsp; 27.07.2020 10:10 &nbsp;|&nbsp; 15 comments</span>
-                </div>
-                <p>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet</p>
-                <br>
-                <div>
-                  <a href="blog-details.html" class="filled-button">Continue Reading</a>
-                </div>
-              </article>
-            </section>
+          <div class="col-md-12">
+            <div class="section-heading">
+              <h2>Our team <em>members</em></h2>
+              <span>Suspendisse a ante in neque iaculis lacinia</span>
+            </div>
           </div>
-
           <div class="col-md-4">
-              <h4 class="h4">Search</h4>
-              
-              <form id="search_form" name="gs" method="GET" action="#">
-                <input type="text" name="q" class="form-control form-control-lg" placeholder="type to search..." autocomplete="on">
-              </form>
+            <div class="team-item">
+              <img src="assets/images/team-image-1-646x680.jpg" alt="">
+              <div class="down-content">
+                <h4>William Smith</h4>
+                <span>Co-Founder</span>
+                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
 
-              <br>
-              <br>
-
-              <h4 class="h4">Recent posts</h4>
-
-              <ul>
-                  <li>
-                      <h5 style="margin-bottom:10px;"><a href="blog-details.html">Dolorum corporis ullam, reiciendis inventore est repudiandae</a></h5>
-                      <small><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10</small>
-                  </li>
-
-                  <li><br></li>
-
-                  <li>
-                      <h5 style="margin-bottom:10px;"><a href="blog-details.html">Culpa ab quasi in rerum dolorum impedit expedita</a></h5>
-                      <small><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10</small>
-                  </li>
-
-                  <li><br></li>
-
-                  <li>
-                    <h5 style="margin-bottom:10px;"><a href="blog-details.html">Explicabo soluta corrupti dolor doloribus optio dolorum</a></h5>
-
-                    <small><i class="fa fa-user"></i> John Doe &nbsp;|&nbsp; <i class="fa fa-calendar"></i> 27.07.2020 10:10</small>
-                  </li>
-              </ul>
+                <p>
+                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-item">
+              <img src="assets/images/team-image-2-646x680.jpg" alt="">
+              <div class="down-content">
+                <h4>Mary Houston</h4>
+                <span>Chief Marketing Officer</span>
+                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                <p>
+                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-item">
+              <img src="assets/images/team-image-3-646x680.jpg" alt="">
+              <div class="down-content">
+                <h4>John Doe</h4>
+                <span>Financial Analyst</span>
+                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
+                <p>
+                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <br>  
-    <br>  
-    <br>  
-    <br>  
 
     <!-- Footer Starts Here -->
     <footer>
@@ -216,10 +189,10 @@
             <h4>Additional Pages</h4>
             <ul class="menu-list">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">How We Work</a></li>
-              <li><a href="#">Quick Support</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">FAQ</a></li>
               <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms</a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item last-item">
