--- a/team.html
+++ b/team.html
@@ -73,6 +73,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="galary.html">Galary</a>
+              </li>
               <li class="nav-item dropdown active">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
               
