--- a/about.html
+++ b/about.html
@@ -249,8 +249,7 @@
         <div class="row">
           <div class="col-md-12">
             <p>
-                Copyright © 2020 Company Name
-                - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
+                Copyright © 2022 ASV Technologies LLC.
             </p>
           </div>
         </div>
