--- a/galary.html
+++ b/galary.html
@@ -179,17 +179,16 @@
     </footer>
     
     <div class="sub-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p>
-                Copyright © 2020 Company Name
-                - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a>
-            </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <p>
+                  Copyright © 2022 ASV Technologies LLC.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
