--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="galary.html">Galary</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown active">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
