--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="galary.html">Galary</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown active">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>ELITE Galary</h1>
+            <h1>ELITE Gallery</h1>
             <span>The most ELITE whips on the east coast</span>
           </div>
         </div>
