added detailing page
added detailing.html page

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,9 @@
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="detailing.html">Detailing</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown">
