--- a/blog-details.html
+++ b/blog-details.html
@@ -71,6 +71,9 @@
                 <a class="nav-link" href="service.html">Service</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="detailing.html">Detailing</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="gear.html">Gear</a>
               </li>
               <li class="nav-item">
