detailing page updates
detailing page updates and css styling

--- a/detailing.html
+++ b/detailing.html
@@ -106,17 +106,17 @@
         <div class="row">
           <div class="col-md-12">
             <h1>Detailing</h1>
-            <span>Protect Your Vehicle with our Mobile Detailing Services</span>
+            <span>Protect Your Vehicle With Our Mobile Detailing Services</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-8">
-        <section class='tabs-content'>
+    <div class="col-md-64">
+        <section class='tabs-content-1'>
           <article id='tabs-1'>
             <img src="assets/images/purple model x.jpeg" alt="">
-            <h4><a href="blog-details.html">Suspension, brakes, alignment, exhaust, wheel and tire packages, diagnostic, drivetrain, tune ups, performance and much more.</a></h4>
+            <h4><a href="blog-details.html">Placeholder</a></h4>
             <p>Daily driver, weekend driver, work truck or super car; our skilled technicians take pride in completing their work to your satisfaction from start to finish using top class equipment and technique.</p>
           </article>
           <article id='tabs-2'>
