--- a/detailing.html
+++ b/detailing.html
@@ -117,7 +117,8 @@
           <article id='tabs-1'>
             <img src="assets/images/purple model x.jpeg" alt="">
             <h4><a href="blog-details.html">Placeholder</a></h4>
-            <p>Daily driver, weekend driver, work truck or super car; our skilled technicians take pride in completing their work to your satisfaction from start to finish using top class equipment and technique.</p>
+            <p>The 
+                <strong> Flawless Finish</strong> mobile detailing van is racking up the miles navigating the DMV each day providing friendly mobile detailing services, competitively priced and promptly delivered to the high standards you’ve come to expect from Elite.</p>
           </article>
           <article id='tabs-2'>
             <img src="assets/images/blog-image-2-940x460.jpg" alt="">
