--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
               <p>We are open from Tues-Fri: 9am-6pm | Sat: 9am-3pm | Sun-Mon: Closed</p>
-              <a href="#">301 604 5004</a>
+              <a href="#">(301)604-5004</a>
             </div>
           </div>
           <div class="col-md-4">
