--- a/gear.html
+++ b/gear.html
@@ -115,8 +115,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2> <em> Elite </em> Gear</h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <h2> <em> Elite </em> Products</h2>
             </div>
           </div>
           <div class="col-md-4">
