edits to about us

--- a/about.html
+++ b/about.html
@@ -122,9 +122,11 @@
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
                     <span>Lorem ipsum dolor sit amet</span>
-                    <h2>Get to know about <em>our company</em></h2>
-                    <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum. Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem. 
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui nec, luctus quam.</p>
+                    <h2>ELITE</h2>
+                    <p>ELITE provides top quality automotive service and customization inclusive of all makes and models.</p>
+                    <p>Founded in 2006 by Chris Yi, a life-long car enthusiast and ASE certified technician by Honda, Acura and Lexus, with a clear focus to work on each car with the same passion he did on his own. To build it like we bought it regardless of the make or model or scope of service being performed.</p>
+                    <p> Through the years ELITE earned a reputation for hard work and excellence within the automotive community. This inclusive approach also developed a loyal customer base and following online. Participation in shows resulted in multiple awards, further developing our profile. Thousands of vehicles graced our lifts from exotic builds to trucks to daily commuters and fleet vehicles, many making us their exclusive service choice year after year.</p>
+                    <p> The excitement of a new build or quality service to perform still means everything to us, and we continue to invest in our business to ensure customers receive the utmost quality. From our equipment and training to the vendors we partner with, and in developing ELITE branded merchandise, we strive to Keep it 100% and welcome you through our doors with more enthusiasm than ever. </p>
                   </div>
                 </div>
                 <div class="col-md-6">
