--- a/gear.html
+++ b/gear.html
@@ -195,9 +195,9 @@
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/elitetshirtmdflag.webp" alt="" />
+              <img src="assets/images/elitehat.webp" alt="" />
               <div class="down-content">
-                <h4>Elite Maryland Themed Shirt</h4>
+                <h4>Elite Snaps</h4>
                 <span>$30</span>
                 <p>
                   In sem sem, dapibus non lacus auctor, ornare sollicitudin
@@ -206,18 +206,13 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2><em> Elite </em> Products</h2>
-            </div>
-          </div>
+          <div class="row">
+            
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/blackhoodie.webp" alt="" />
+              <img src="assets/images/eliterx7t.webp" alt="" />
               <div class="down-content">
-                <h4>Elite Clean Hoodie</h4>
+                <h4>Elite RX7 Tee</h4>
                 <span>$50</span>
                 <p>
                   In sem sem, dapibus non lacus auctor, ornare sollicitudin
@@ -228,9 +223,9 @@
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/elitetshirtmdflag.webp" alt="" />
+              <img src="assets/images/Elitewifeyt.webp" alt="" />
               <div class="down-content">
-                <h4>Elite Maryland Themed Shirt</h4>
+                <h4>Wifey T</h4>
                 <span>$30</span>
                 <p>
                   In sem sem, dapibus non lacus auctor, ornare sollicitudin
@@ -241,9 +236,9 @@
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/elitetshirtmdflag.webp" alt="" />
+              <img src="assets/images/EliteHustle24.webp" alt="" />
               <div class="down-content">
-                <h4>Elite Maryland Themed Shirt</h4>
+                <h4>Elite Hustle 24/7/365</h4>
                 <span>$30</span>
                 <p>
                   In sem sem, dapibus non lacus auctor, ornare sollicitudin
