--- a/gear.html
+++ b/gear.html
@@ -256,10 +256,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
-            <h4>Car Dealer Website</h4>
-            <p>
-              Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus
-              augue hasellus lacinia sapien vitae.
+            <h4>ELITE</h4>
+            <p>Auto Services</p>
             </p>
             <ul class="social-icons">
               <li>
