--- a/contact.html
+++ b/contact.html
@@ -202,8 +202,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 footer-item">
-            <h4>Car Dealer Website</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <h4>ELITE</h4>
+            <p>Auto Services</p>
             <ul class="social-icons">
               <li><a href="https://www.facebook.com/eliteimportz" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://www.instagram.com/eliteimportz/" target="_blank"><i class="fa fa-instagram"></i></a></li>
