Update service page with images and title line

--- a/service.html
+++ b/service.html
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1>Service</h1>
-            <span>Lorem ipsum dolor sit amet.</span>
+            <span>From basic maintenance to max performance upgrades, Elite can handle whatever work you need done.</span>
           </div>
         </div>
       </div>
@@ -113,31 +113,133 @@
     <div class="service-list">
       <div class="service-row">
         <div class="service">
-          <img src="assets/images/maintenance.png" alt>
-          <p>Routine and Factory Scheduled Maintenance</p> 
+          <div class="service-image">
+            <img src="assets/images/maitenance.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Routine and Factory Scheduled Maintenance</p>
+          </div> 
         </div>
-        <div class="service">Timing belts / Tune up</div>
-        <div class="service">Exhaust Systems</div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/timingbeltcolor.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Timing belts / Tune up</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/exhausticon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Exhaust Systems</p>
+          </div>
+        </div>
       </div>
       <div class="service-row">
-        <div class="service">Suspension Upgrades</div>
-        <div class="service">Lowering Kits / Lift Kits</div>
-        <div class="service">Aftermarket Wheels- Custom, Off-road Rims and Tires</div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/suspension.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Suspension Upgrades</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/liftkiticon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Lowering Kits / Lift Kits</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/rims.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Aftermarket Wheels- Custom, Off-road Rims and Tires</p>
+          </div>
+        </div>
       </div>
       <div class="service-row">
-        <div class="service">Performance Upgrades</div>
-        <div class="service">Tire Mounting and Balancing - Up to 30 inch wheels</div>
-        <div class="service">Hunter Road Force Tire Balancing</div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/performanceicon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Performance Upgrades</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/tiremounting.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Tire Mounting and Balancing</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/balancingicon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Hunter Road Force Tire Balancing</p>
+          </div>
+        </div>
       </div>
       <div class="service-row">
-        <div class="service">Fender Rolling</div>
-        <div class="service">In Ground Hunter Alignment System / Custom Alignments</div>
-        <div class="service">Brake Systems / Brake Upgrades</div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/frontbumpericon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Fender Rolling</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/lowering.png" alt>
+          </div>
+          <div class="service-title">
+            <p>In Ground Hunter Alignment System / Custom Alignments</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/brakeicon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Brake Systems / Brake Upgrades</p>
+          </div>
+        </div>
       </div>
       <div class="service-row">
-        <div>Full Engine Service and Repair</div>
-        <div>Transmission and Drivetrain</div>
-        <div>Vehicle Lighting Upgrades</div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/engineicon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Full Engine Service and Repair</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/transmissionicon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Transmission and Drivetrain</p>
+          </div>
+        </div>
+        <div class="service">
+          <div class="service-image">
+            <img src="assets/images/lighticon.png" alt>
+          </div>
+          <div class="service-title">
+            <p>Vehicle Lighting Upgrades</p>
+          </div>
+        </div>
       </div>
     </div>
 
