--- a/testimonials.html
+++ b/testimonials.html
@@ -110,8 +110,10 @@
       </div>
     </div>
 
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-0e996447-6f35-4805-8cd8-3b9b241c76bd"></div>
+    <div class="yelpwidget">
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-0e996447-6f35-4805-8cd8-3b9b241c76bd"></div>
+    </div>
 
     <!-- Footer Starts Here -->
     <footer>
