--- a/testimonials.html
+++ b/testimonials.html
@@ -38,8 +38,8 @@
         <div class="row">
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
-              <li><a href="#"><i class="fa fa-envelope"></i>chris@eliteimportz.com</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>301-604-5004</a></li>
+              <li><a href="mailto:chris@eliteimportz.com"><i class="fa fa-envelope"></i>chris@eliteimportz.com</a></li>
+              <li><a href="tel:301-604-5004"><i class="fa fa-phone"></i>301-604-5004</a></li>
             </ul>
           </div>
           <div class="col-md-4">
