--- a/detailing.html
+++ b/detailing.html
@@ -123,10 +123,10 @@
             <h4><a href="blog-details.html">Express Detail</a></h4>
             <p>
               <ul> 
-                <li> <bullet> Two Bucket Hand Wash of Entire Vehicle</bullet></li>
+                <li> Two Bucket Hand Wash of Entire Vehicle</li>
                 <li> Air Dried and Sprayed With our Proprietary Blend of Waxes/Coatings</li>
                 <li> Tire Dressing</li>
-                <bullet> tire Dressing</bullet>
+              
 
               </ul>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet</p>
           </article>
