--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
               <p>3248 Laurel Fort Meade Rd. <br> Laurel, MD 20724</p>
-              <a href="https://www.google.com/maps/dir/Elite+Auto+Service/">View on Google Maps</a>
+              <a href="https://goo.gl/maps/4MPxFt1iWAU1kojX7" target="_blank">View on Google Maps</a>
             </div>
           </div>
         </div>
