Fixed overlapping gear boxes

--- a/gear.html
+++ b/gear.html
@@ -155,7 +155,7 @@
 
     <div class="team" style="margin: 0">
       <div class="container">
-        <div class="row">
+        <div class="gear-row">
           <div class="col-md-12">
             <div class="section-heading">
               <h2><em> Elite </em> Products</h2>
