--- a/detailing.html
+++ b/detailing.html
@@ -114,28 +114,58 @@
         <section class='tabs-content-1'>
           <article id='tabs-1'>
             <img src="assets/images/purple model x.jpeg" alt="">
-            <h4><a href="blog-details.html">Placeholder</a></h4>
+            <h4><a href="blog-details.html">Our Process</a></h4>
             <p>The 
                 <strong> Flawless Finish</strong> mobile detailing van is racking up the miles navigating the DMV each day providing friendly mobile detailing services, competitively priced and promptly delivered to the high standards you’ve come to expect from Elite.</p>
           </article>
           <article id='tabs-2'>
             <img src="assets/images/blog-image-2-940x460.jpg" alt="">
-            <h4><a href="blog-details.html">Express Detail</a></h4>
-            <p>
-              <ul> 
-                <li> Two Bucket Hand Wash of Entire Vehicle</li>
-                <li> Air Dried and Sprayed With our Proprietary Blend of Waxes/Coatings</li>
-                <li> Tire Dressing</li>
+          <div class="all-detail">    
+            <div Class="detail-box">
+            <h4><a>Express Detail</a></h4>
               
-
-              </ul>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet</p>
-          </article>
-          <article id='tabs-3'>
-            <img src="assets/images/blog-image-3-940x460.jpg" alt="">
-            <h4><a href="blog-details.html">Class aptent taciti sociosqu ad litora torquent per</a></h4>
-            <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
-            </p>
-          </article>
+                <ul class="Detail">
+                  <li> Two Bucket Hand Wash of Entire Vehicle</li>
+                  <li> Air Dried and Sprayed With our Proprietary Blend of Waxes/Coatings</li>
+                  <li> Tire Dressing</li>
+                  <li> light Interior Detail 
+                    <ul>
+                      <li>Carpet Vaccum </li>
+                      <li>Full trim and Dash Wipedown </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            <div Class="detail-box">
+              <h4><a>Full Detail</a></h4>
+                <ul class="Detail">
+                  <li> Express Detail</li>
+                  <li> Seal Exterior with Premium Coating</li>
+                  <li> Tire Dressing</li>
+                  <li> Extensive Interior Detail</li>
+                </ul>
+            </div>
+            <div Class="detail-box">
+              <h4><a>Premium Detail</a></h4>
+                <ul class="Detail">
+                  <li> Full Detail</li>
+                  <li> Seal Exterior with Premium Coating or Hand Wax</li>
+                  <li> Interior Steam Cleaning</li>
+                  <li> Leather Cleaning/conditioning</li>
+                </ul>
+              </div>
+              <div Class="detail-box">
+                <h4><a>Interior Detail (Interior only)</a></h4>
+                  <ul class="Detail">
+                    <li> Pet Hair Removal</li>
+                    <li> Interior Steamed and Scrubbed with Stain Removing Soap and Sprays</li>
+                    <li> trim Wipedown</li>
+                    <li> Premium Leather Cleansing and Conditioning</li>
+                  </ul>
+                </div>
+              </div>
+          </div>
+          
         </section>
       </div>
     </div>
